Upgrade bytecode targets to j11.